# rpi-zoom-midi-host

./: MANIFEST.in  README.md  pyproject.toml
src/zoom_midi_host/: __init__.py  __main__.py  app.py  config.py  display.py  effect_catalog.py  m_vave.py  midi.py  ms60b_effect_ids.py  service.py  state.py  usb_monitor.py  zoom_ms60b.py  zoom_protocol.py
